IRtest_out/063_sort_test3.err
irs/063_sort_test3.ll:39:29: error: invalid getelementptr indices
  %v32 = getelementptr i32, i32* %v14, i32 0, i32 %v31
                            ^
1 error generated.
